--- a/css/main.scss
+++ b/css/main.scss
@@ -73,6 +73,12 @@ hr {
   color: #fff;
 }
 
+.spacer {
+  -webkit-flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+}
+
 a[disabled] {
     pointer-events: none;
 }
